--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,98 @@
-<h1>
-  {{title}}
-</h1>
+<nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <a class="navbar-brand" href="#">Carousel</a>
+  <div class="collapse navbar-collapse" id="navbarCollapse">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li>
+    </ul>
+    <form class="form-inline mt-2 mt-md-0">
+      <input class="form-control mr-sm-2" type="text" placeholder="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
+
+    <div id="carouselProcrastinate" class="carousel slide" data-ride="carousel">
+      <ul class="carousel-indicators">
+        <li data-target="#carouselProcrastinate" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselProcrastinate" data-slide-to="1" ></li>
+        <li data-target="#carouselProcrastinate" data-slide-to="2" ></li>
+        <li data-target="#carouselProcrastinate" data-slide-to="3" ></li>
+      </ul>
+      <div class="carousel-inner " role="listbox" style="max-height:620px !important">
+        <div class="carousel-item active">
+          <img class="d-block img-fluid" src="./assets/full-bg-4.jpg" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block img-fluid" src="./assets/full-bg-9.jpg" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block img-fluid" src="./assets/poly-bg-1.jpg" alt="Third slide">
+        </div>
+        <div class="carousel-item ">
+          <img class="d-block img-fluid" src="./assets/poly-bg-3.jpg" alt="Fourth slide">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselProcrastinate" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselProcrastinate" role="button" data-slide="prev">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+  </div>
+  <div class="container marketing">
+    <div class="row">
+      <div class="col">
+        <div class="card" >
+          <img class="rounded-circle" alt="Generic placeholder image" width="140" height="140">
+          <div class="card-block">
+            <i class="hand-grab-o"></i>
+            <h4 class="card-title">Procrastination</h4>
+            <p class="card-text"> Is Procrastination a problem in your life?</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <img class="rounded-circle" alt="Generic placeholder image" width="140" height="140">
+        <div class="card" >
+          <div class="card-block">
+            <i class="sort-amount-dsc"></i>
+            <h4 class="card-title">Task Lists</h4>
+            <p class="card-text"> Do you have an ever growing task list?</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <img class="rounded-circle" alt="Generic placeholder image" width="140" height="140">
+        <div class="card" >
+          <div class="card-block">
+            <i class="gamepad"></i>
+            <h4 class="card-title">Bad Habits </h4>
+            <p class="card-text">Do you have habits or behaviours you would like to change?</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <hr class="featurette-divider">
+    <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
+          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        </div>
+        <div class="col-md-5">
+          <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="500x500" style="width: 500px; height: 500px;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22500%22%20height%3D%22500%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20500%20500%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_15aa0837116%20text%20%7B%20fill%3A%23AAAAAA%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A25pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_15aa0837116%22%3E%3Crect%20width%3D%22500%22%20height%3D%22500%22%20fill%3D%22%23EEEEEE%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22185.125%22%20y%3D%22261.1%22%3E500x500%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
+        </div>
+      </div>
+  </div>
